# redshift-fast-api

./: README.md  pyproject.toml
redshift_fast_api/: main.py
